--- a/app.json
+++ b/app.json
@@ -5,7 +5,12 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#ECEBFF"
+    }
   },
   "name": "toDoList"
+
 }
