--- a/app.json
+++ b/app.json
@@ -6,8 +6,10 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
+      "resizeMode": "contain",
       "backgroundColor": "#ECEBFF"
     }
   },
